--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "concat-map": "^0.0.1",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
@@ -26,15 +27,14 @@
     "is-number": "^7.0.0",
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
+    "mongodb": "^6.3.0",
     "ms": "^2.1.2",
-    "mysql2": "^3.6.5",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
     "pstree.remy": "^1.1.8",
     "readdirp": "^3.6.0",
     "semver": "^7.5.4",
-    "sequelize": "^6.35.2",
     "simple-update-notifier": "^2.0.0",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
