--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
     "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.2",
+    "bson": "^6.2.0",
     "chokidar": "^3.5.3",
     "concat-map": "^0.0.1",
+    "connect-mongodb-session": "^4.0.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
@@ -28,6 +31,7 @@
     "lru-cache": "^6.0.0",
     "minimatch": "^3.1.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "ms": "^2.1.2",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
