--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "abbrev": "^1.1.1",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.2.0",
     "body-parser": "^1.20.2",
     "brace-expansion": "^1.1.11",
@@ -15,7 +16,9 @@
     "chokidar": "^3.5.3",
     "concat-map": "^0.0.1",
     "connect-mongodb-session": "^4.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -33,6 +36,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "ms": "^2.1.2",
+    "nodemailer": "^6.9.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "picomatch": "^2.3.1",
