--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "bson": "^6.2.0",
     "chokidar": "^3.5.3",
     "concat-map": "^0.0.1",
-    "connect-mongodb-session": "^4.0.0",
+    "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "fill-range": "^7.0.1",
     "glob-parent": "^5.1.2",
     "has-flag": "^3.0.0",
@@ -36,6 +37,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "ms": "^2.1.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nopt": "^1.0.10",
